--- a/bloco_6/dia_2/style.css
+++ b/bloco_6/dia_2/style.css
@@ -1,56 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-header {
-  text-align: center;
-}
-
-.container {
-  background-color: rgb(220, 220, 220);
-  padding: 20px;
-  width: 80%;
-  margin: 20px auto;
-}
-
-.form-fieldset {
-  margin-bottom: 10px;
-}
-
-.form-row {
-  margin: 10px;
-}
-
-.form-row input[type="text"], .form-row select, .form-row textarea{
-  width: 100%;
-  padding: 5px;
-}
-
-.bt {
-  color: white;
-  margin-top: 10px;
-  margin-right: 10px;
-  padding: 5px 10px;
-  border-radius: 8px;
-  color: white;
-  opacity: 0.8;
-}
-
-.bt:hover {
-  opacity: 1;
-}
-
-.bt-submit {
-  background-color: green;
-
-}
-
-.bt-reset {
-  background-color: red;
-}
-
-.error {
-  border: 1px solid red;
+body {
+  background-color: aliceblue;
+  width: 70%;
+  margin: 0 auto;
 }
